// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsSupport <EsSupport /> 1`] = `
"<div imgname=\\"benr\\" repname=\\"Ben\\" class=\\"d-flex support-holder align-items-center\\">
  <div class=\\"image-holder mr-3\\"><a target=\\"_blank\\" aria-label=\\"Help\\" href=\\"https://www.google.com/\\"><img alt=\\"Help Image\\" width=\\"64\\" height=\\"64\\" class=\\"image\\"></a></div>
  <div class=\\"text-holder d-flex flex-column\\">
    <div class=\\"title\\">
      <div class=\\"h5 mb-1 font-size-base font-weight-bold\\">
        Need help signing up?
      </div>
    </div>
    <div class=\\"link\\"><a target=\\"_blank\\" href=\\"https://www.google.com/\\" class=\\"supportLink\\">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport Image exists 1`] = `
"<div repname=\\"Ben\\" class=\\"d-flex support-holder align-items-center\\">
  <div class=\\"image-holder mr-3\\"><a target=\\"_blank\\" aria-label=\\"Help\\" href=\\"https://www.google.com/\\"><img alt=\\"Help Image\\" width=\\"64\\" height=\\"64\\" class=\\"image\\"></a></div>
  <div class=\\"text-holder d-flex flex-column\\">
    <div class=\\"title\\">
      <div class=\\"h5 mb-1 font-size-base font-weight-bold\\">
        Need help signing up?
      </div>
    </div>
    <div class=\\"link\\"><a target=\\"_blank\\" href=\\"https://www.google.com/\\" class=\\"supportLink\\">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport Support text exists 1`] = `
"<div class=\\"d-flex support-holder align-items-center\\">
  <div class=\\"image-holder mr-3\\"><a target=\\"_blank\\" aria-label=\\"Ben\\" href=\\"https://www.google.com/\\"><img src=\\"\\" alt=\\"Ben\\" width=\\"64\\" height=\\"64\\" class=\\"image\\"></a></div>
  <div class=\\"text-holder d-flex flex-column\\">
    <div class=\\"title\\">
      <div class=\\"h5 mb-1 font-size-base font-weight-bold\\">Need help signing up?</div>
    </div>
    <div class=\\"link\\"><a target=\\"_blank\\" href=\\"https://www.google.com/\\" class=\\"supportLink\\">
        Schedule a free call with Ben, your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport Support title slot exists 1`] = `
"<div imgname=\\"benr\\" repname=\\"Ben\\" class=\\"d-flex support-holder align-items-center\\">
  <div class=\\"image-holder mr-3\\"><a target=\\"_blank\\" aria-label=\\"Help\\" href=\\"https://www.google.com/\\"><img alt=\\"Help Image\\" width=\\"64\\" height=\\"64\\" class=\\"image\\"></a></div>
  <div class=\\"text-holder d-flex flex-column\\">
    <div class=\\"title\\">
      <div class=\\"h5 mb-1 font-size-base font-weight-bold\\">
        Need help signing up?
      </div>
    </div>
    <div class=\\"link\\"><a target=\\"_blank\\" href=\\"https://www.google.com/\\" class=\\"supportLink\\">
        Schedule a free call with your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;

exports[`EsSupport props exist 1`] = `
"<div class=\\"d-flex support-holder align-items-center\\">
  <div class=\\"image-holder mr-3\\"><a target=\\"_blank\\" aria-label=\\"Ben\\" href=\\"https://www.google.com/\\"><img src=\\"\\" alt=\\"Ben\\" width=\\"64\\" height=\\"64\\" class=\\"image\\"></a></div>
  <div class=\\"text-holder d-flex flex-column\\">
    <div class=\\"title\\">
      <div class=\\"h5 mb-1 font-size-base font-weight-bold\\">Need help signing up?</div>
    </div>
    <div class=\\"link\\"><a target=\\"_blank\\" href=\\"https://www.google.com/\\" class=\\"supportLink\\">
        Schedule a free call with Ben, your EnergySage Advisor.
      </a></div>
  </div>
</div>"
`;
